[BUGFIX] Selected text in Aloha plugin is visible now
A selection in an Aloha block now results in a custom selection
style to be applied instead of nothing.

Original-Commit-Hash: f09f16304982d366f2c6a103f91119e918f9c4e0

--- a/TYPO3.Neos/Resources/Public/StyleSheet/_style-workInProgress.scss
+++ b/TYPO3.Neos/Resources/Public/StyleSheet/_style-workInProgress.scss
@@ -187,4 +187,10 @@ button.t3-create-new-content {
 	display: inline-block;
 }
 
+
+// Selection background in Aloha blocks
+.aloha-block.aloha-block-TYPO3Block ::selection { background: #2F7ECC; color: #ffffff; }
+.aloha-block.aloha-block-TYPO3Block ::-moz-selection { background: #2F7ECC; color: #ffffff; }
+
+
 // Launcher
